# ra-aiag

./: .env  README.md  fix_newline.py  pyproject.toml
src/ai_agent/: agent.py  cli.py  config.py  exceptions.py  ollama_client.py
src/ai_agent/data_sources/: __init__.py  base.py  csv_source.py  oracle_source.py
src/ai_agent_ollama.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
