[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-ollama"
version = "0.1.0"
description = "AI agent that connects to Oracle or CSV/Excel sources and uses Ollama GPT OSS 20B"
authors = [{ name = "Felipe" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "oracledb>=1.5",
    "python-dotenv>=1.0"
]

[project.optional-dependencies]
excel = [
    "openpyxl>=3.1"
]

[project.scripts]
ai-agent = "ai_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

